
Revision 0.4.1, released XX-10-2018
-----------------------------------

- Added IPv6 support to SNMP engines built into snmpfwd server
  and client effectively allowing IP version translation of the
  SNMP traffic
- Missing *snmp-security-engine-id* option implemented
  in the server part to make SNMPv3 TRAP forwarding operational
- Added SNMPv2c->SNMPv3 command forwarder example configuration
- TRAP forwarding examples made more versatile
- Bumped upper Python version to 3.7
- Fixed v1->v2c TRAP PDU translation in snmpfwd server

Revision 0.3.3, released 16-04-2018
-----------------------------------

- Added a workaround to preserve log files rotation time
  on process restart
- Added support 'S' for seconds and 'M' for minutes in log
  file rotation syntax
- Added note on SNMPv3 TRAP configuration

Revision 0.3.2, released 07-03-2018
-----------------------------------

- Copyright notice extended to the year 2018
- Fixed crash in log formatting routine
- Fixed bug in key aliasing in logging

Revision 0.3.1, released 22-12-2017
-----------------------------------

- HMAC-SHA-2 authentication and strong AES encryption protocols
  support added
- The pycryptodome dependency replaced with pycryptodomex as
  it is recommended by the upstream to avoid unwanted interference
- Migrated references from SourceForge
- Fixed crash during TRAPv1 handling at the server part
- Sphinx docs layout updated

Revision 0.2.2, released 04-07-2017
-----------------------------------

- GETBULK PDU support added to the oidfilter plugin
- Two-digit subsecond precision implemented across all logs
- Unique, system-wide request identifier implemented under the name
  of callflow-id
- System logging reworked for uniformity and usability
- Fix to catch errors coming from SNMP engine when sending malformed
  message SNMP
- Fix to snmp-peer-timeout option documentation and examples
- Fix to the server to handle the case of missing response PDU
  coming from client
