@@ -1,0 +1,61 @@
+#
+# SNMP forwarder: Agent part configuration
+#
+
+config-version: 2
+program-name: snmpfwd-server
+
+snmp-credentials-group {
+  snmp-transport-domain: 1.3.6.1.6.1.1.100
+  snmp-bind-address: 127.0.0.1:1161
+
+  snmp-engine-id: 0x0102030405070809
+
+  snmp-community-name: public
+  snmp-security-name: public
+  snmp-security-model: 2
+  snmp-security-level: 1
+
+  snmp-credentials-id: snmp-credentials
+}
+
+context-group {
+  snmp-context-engine-id-pattern: .*?
+  snmp-context-name-pattern: .*?
+
+  snmp-context-id: any-context
+}
+
+content-group {
+  snmp-pdu-type-pattern: .*?
+  snmp-pdu-oid-prefix-pattern-list: .*?
+
+  snmp-content-id: any-content
+}
+
+peers-group {
+  snmp-transport-domain: 1.3.6.1.6.1.1.100
+  snmp-bind-address-pattern-list: .*?
+  snmp-peer-address-pattern-list: .*?
+
+  snmp-peer-id: 100
+}
+
+trunking-group {
+  trunk-bind-address: [::1]
+  trunk-peer-address: [::1]:30301
+  trunk-ping-period: 60
+  trunk-connection-mode: client
+
+  trunk-id: trunk-1
+}
+
+routing-map {
+  matching-snmp-context-id-list: any-context
+  matching-snmp-content-id-list: any-content
+
+  matching-snmp-credentials-id-list: snmp-credentials
+  matching-snmp-peer-id-list: 100
+
+  using-trunk-id-list: trunk-1
+}
